--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,7 @@
 
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
-        Powered by
-        <a href="https://beautifuljekyll.com">Beautiful Jekyll</a>
+        This is a fan site for entertainment purposes only. All rights remain with the owners of The Office and NBC.
       </p>{% endunless %}
       </div>
     </div>
