--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -10,10 +10,10 @@ layout: null
   --text-col: {{ site.text-col | default: "#404040" }};
   --link-col: {{ site.link-col | default: "#008AFF" }};
   --hover-col: {{ site.hover-col | default: "#0085A1" }};
-  --navbar-col: {{ site.navbar-col | default: "#EAEAEA" }};
+  --navbar-col: {{ site.navbar-col | default: "#ffffff" }};
   --navbar-text-col: {{ site.navbar-text-col | default: "#404040" }};
-  --navbar-border-col: {{ site.navbar-border-col | default: "#DDDDDD" }};
-  --footer-col: {{ site.footer-col | default: "#EAEAEA" }};
+  --navbar-border-col: {{ site.navbar-border-col | default: "#ffffff" }};
+  --footer-col: {{ site.footer-col | default: "#ffffff" }};
   --footer-text-col: {{ site.footer-text-col | default: "#777777" }};
   --footer-link-col: {{ site.footer-link-col | default: "#404040" }};
   --footer-hover-col: {{ site.footer-hover-col | default: "#0085A1" }};
@@ -59,12 +59,16 @@ h1,h2,h3,h4,h5,h6 {
 }
 h1 {
   font-size: 2.25rem;
+  padding-top: 8rem;
+  text-align: center;
 }
 h2 {
-  font-size: 1.875rem;
+  font-size: 1.6rem;
+  text-align: center;
 }
 h3 {
   font-size: 1.5rem;
+  text-align: center;
 }
 h4 {
   font-size: 1.125rem;
@@ -72,8 +76,15 @@ h4 {
 h1, h2, h3, h4 {
   margin-top: 1.25rem;
 }
+.iframe-container {
+  display: flex;
+  justify-content: center;
+}
 a {
   color: var(--link-col);
+}
+.about-title h1 {
+  padding-top: 0rem;
 }
 a:hover,
 a:focus {
@@ -153,7 +164,6 @@ img {
 
 .navbar-custom {
   background-color: var(--navbar-col);
-  border-bottom: 1px solid var(--navbar-border-col);
   font-family: var(--header-font);
   {% if site.navbar-img %}
     background-image: url({{ site.navbar-img | relative_url }});
@@ -340,7 +350,6 @@ img {
 .navbar-custom .navbar-brand:focus ,
 .navbar-custom .navbar-nav .nav-link:hover,
 .navbar-custom .navbar-nav .nav-link:focus,
-.navbar-custom .navbar-nav .dropdown-menu .dropdown-item:hover,
 .navbar-custom .navbar-nav .dropdown-menu .dropdown-item:focus {
   color: var(--hover-col);
 }
@@ -364,7 +373,8 @@ img {
 
 .navbar-custom .avatar-container .avatar-img-border {
   width: 100%;
-  margin-left: -50%;
+  margin-left: -175%;
+  margin-bottom: -100%;
   {% unless site.round-avatar == false %}
     border-radius: 50%;
     box-shadow: 0 0 0.5rem rgba(0, 0, 0, .8);
@@ -391,7 +401,7 @@ img {
   }
 
   .navbar-custom.top-nav-regular .avatar-container .avatar-img-border {
-    width: 100%;
+    width: 350%;
     {% unless site.round-avatar == false %}
     box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
     -webkit-box-shadow: 1px 1px 2px rgba(0, 0, 0, .8);
@@ -713,6 +723,7 @@ nav.top-nav-short-permanent ~ header > .intro-header.big-img {
 .intro-header .page-heading h1 {
   margin-top: 0;
   font-size: 3.125rem;
+  padding-top: 8rem;
 }
 .intro-header .post-heading h1 {
   margin-top: 0;
